deploy/k8s/components/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trinette
  # annotations:
  #   cert-manager.io/cluster-issuer: letsencrypt
spec:
  # ingressClassName: nginx
  tls:
    - hosts:
        - trinette.example.com
      secretName: trinette-tls
  rules:
    - host: trinette.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trinette
                port:
                  name: http
